# Game

./: .gitmodules  CMakeLists.txt  LICENSE
Engine/: CMakeLists.txt
Engine/src/: Engine.hpp
Engine/src/Core/: Application.cpp  Application.hpp  EntryPoint.cpp  ResourceLoader.cpp  ResourceLoader.hpp  Window.cpp  Window.hpp
Engine/src/Entities/: Camera.cpp  Camera.hpp
Engine/src/Graphics/: ArrayBuffer.cpp  ArrayBuffer.hpp  ElementArrayBuffer.cpp  ElementArrayBuffer.hpp  Image.cpp  Image.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  Vertex.cpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp
Engine/src/Utils/: FileSystem.cpp  FileSystem.hpp  Logger.cpp  Logger.hpp
assets/shaders/: fDefault.glsl  vDefault.glsl
scripts/: build-delete.cmd  build.cmd  compile-link.cmd
src/: Game.cpp  Game.hpp
